force-app/main/default/objects/Material_Req_Batch__c/Material_Req_Batch__c.object-meta.xml
<CustomObject>
    <label>Material Req Batch</label>
    <nameField>
        <displayFormat>MR Batch-{000000}</displayFormat>
        <label>Material Req Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Req Batch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>