force-app/main/default/objects/Material_Req_Batch__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Material Req Batch</relationshipLabel>
    <relationshipName>Material_Req_Batch</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>