force-app/main/default/objects/Material_Req_Batch__c/fields/Batch_Value__c.field-meta.xml
<CustomField>
    <fullName>Batch_Value__c</fullName>
    <label>Batch Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>