force-app/main/default/objects/Material_Req_Batch__c/fields/Material_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Material_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Requisition</label>
    <referenceTo>Material_Requisition__c</referenceTo>
    <relationshipLabel>Material Req Batch</relationshipLabel>
    <relationshipName>Material_Req_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>