force-app/main/default/objects/Material_Req_Batch__c/fields/Number_of_Entries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Entries__c</fullName>
    <label>Number of Entries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>